<resources>
    <string name="app_name">Daily Dhamma</string>
    <string name="app_notification_channel_id">Daily Dhamma channel id</string>
    <string name="action_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_default_font_size">Small</string>
    <string name="pref_title_font_size">Font Size</string>
    <string-array name="pref_font_size_list_titles">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="pref_font_size_list_values">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <!-- Settings for Language -->
    <string name="pref_header_language">Language</string>
    <string name="pref_default_language">Indonesian</string>
    <string name="pref_default_language_en">English</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_list_titles">
        <item>Indonesian</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>Indonesian</item>
        <item>English</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_enable_notification">Enable Notifications</string>

    <string name="pref_title_notification_time">Notification Time</string>
    <string name="pref_default_notification_time">06:00</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="daily">Daily</string>
    <string name="list">List</string>
    <string name="random">Random</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="daily_dhamma">Daily Dhamma</string>
    <string name="app_notification_description">This notification used to show random notification about the daily dhamma</string>
    <string name="app_notification_title">Your remainder from Daily Dhamma</string>
    <string name="enable_exact_alarm_permission">Enable Exact Alarm Permission</string>
    <string name="exact_alarm_permission_description">This permission is required to trigger notifications at specific times, even if the app is not running.</string>
    <string-array name="pref_notification_time_list_titles">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="pref_notification_time_list_values">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

</resources>
