<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notification_enable"
        android:title="@string/pref_title_enable_notification" />

    <ListPreference
        android:defaultValue="@string/pref_default_notification_time"
        android:entries="@array/pref_notification_time_list_titles"
        android:entryValues="@array/pref_notification_time_list_values"
        android:key="notification_time_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_notification_time" />

</PreferenceScreen>
