<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="red.point.dailydhamma.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="red.point.dailydhamma.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="red.point.dailydhamma.SettingsActivity$LanguagePreferenceFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/pref_header_language" />

</preference-headers>
